
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int fgets (char*,int,int ) ;
 int send (unsigned int,char*,int ,int ) ;
 int stdin ;
 int strlen (char*) ;

void client2serv(unsigned int s) {
 char buff[4096];

 for (;;) {
  fgets(buff,4096,stdin);
  send(s,buff,strlen(buff),0);
 }
}
