; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_395.c_client2serv.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_395.c_client2serv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stdin = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @client2serv(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca [4096 x i8], align 16
  store i32 %0, i32* %2, align 4
  br label %4

4:                                                ; preds = %4, %1
  %5 = getelementptr inbounds [4096 x i8], [4096 x i8]* %3, i64 0, i64 0
  %6 = load i32, i32* @stdin, align 4
  %7 = call i32 @fgets(i8* %5, i32 4096, i32 %6)
  %8 = load i32, i32* %2, align 4
  %9 = getelementptr inbounds [4096 x i8], [4096 x i8]* %3, i64 0, i64 0
  %10 = getelementptr inbounds [4096 x i8], [4096 x i8]* %3, i64 0, i64 0
  %11 = call i32 @strlen(i8* %10)
  %12 = call i32 @send(i32 %8, i8* %9, i32 %11, i32 0)
  br label %4
}

declare dso_local i32 @fgets(i8*, i32, i32) #1

declare dso_local i32 @send(i32, i8*, i32, i32) #1

declare dso_local i32 @strlen(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
